Fix alignment of social media buttons

--- a/css/material.css
+++ b/css/material.css
@@ -171,7 +171,7 @@ p {
   margin: -5px 0px 0px 0px;
   padding: 0px;
   float: left;
-  width: 25%;
+  width: 50%;
   text-align: center;
 }
 
